# cyclonedx-rust-cargo

cyclonedx-bom/: Cargo.toml
cyclonedx-bom/src/: errors.rs  lib.rs  models.rs
cyclonedx-bom/src/external_models/: mod.rs  normalized_string.rs  spdx.rs  uri.rs
cyclonedx-bom/src/snapshots/: cyclonedx_bom__test__it_should_serialize_to_json.snap  cyclonedx_bom__test__it_should_serialize_to_xml.snap
cyclonedx-bom/src/specs/: mod.rs  v1_3.rs
cyclonedx-bom/src/specs/snapshots/: cyclonedx_bom__specs__v1_3__test__it_should_handle_licenses_correctly.snap  cyclonedx_bom__specs__v1_3__test__it_should_serialize_a_complex_example_to_json.snap  cyclonedx_bom__specs__v1_3__test__it_should_serialize_to_json.snap
cyclonedx-bom/src/specs/v1_3/: attached_text.rs  bom.rs  mod.rs  property.rs
cyclonedx-bom/src/specs/v1_3/snapshots/: cyclonedx_bom__spec__v1_3__test__it_should_serialize_to_json.snap  cyclonedx_bom__spec__v1_3__test__it_should_serialize_to_xml.snap  cyclonedx_bom__specs__v1_3__test__it_should_handle_licenses_correctly.snap  cyclonedx_bom__specs__v1_3__test__it_should_serialize_a_complex_example_to_json.snap  cyclonedx_bom__specs__v1_3__test__it_should_serialize_to_json.snap
