[package]
name = "cyclonedx-bom"
version = "0.3.1"
license = "Apache-2.0"
edition = "2018"

description = "CycloneDX Software Bill of Materials Library"
homepage = "https://cyclonedx.org/"
repository = "https://github.com/CycloneDX/cyclonedx-rust-cargo"
readme = "README.md"

categories = []
keywords = ["sbom", "bom", "components", "dependencies", "owasp"]

[dependencies]
once_cell = "1.9.0"
packageurl = "0.3.0"
serde = "1.0.131"
serde_json = "1.0.72"
thiserror = "1.0.30"
uuid = "0.8.2"
yaserde = "0.7.1"
yaserde_derive = "0.7.1"

[dev-dependencies]
insta = "1.8.0"
